Correccion me pego un tiro parte 1